# toy-python-pkg

./: .gitignore  README.md  pyproject.toml
src/toy_pkg/: __init__.py  say_hello.py
tests/: test_toy_pkg.py
