[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toy-python-pkg-ayush"
version = "0.1.0"
description = "A toy Python package for practice"
authors = [
  { name = "Ayush", email = "ayushmehuljoshi@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/ayushhhj/toy_python_pkg"

[tool.setuptools]
# Tell setuptools that all packages live under src/
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
